# image-viewer

./: CMakeLists.txt  PalImageViewerConfig.cmake.in  readme.md
example/: CMakeLists.txt  main-window.cpp  main.cpp  rect-selection.cpp  rect-selection.h
include/pal/: image-viewer.h
src/: CMakeLists.txt  image-viewer.cpp  image-viewer.h  image-viewer.qrc
